--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html ng-app="Ltc">
     <head>
-        <title>TODO supply a title</title>
+        <title>Ltc</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -25,6 +25,7 @@ and open the template in the editor.
         <script src="./js/lib/bootstrap-datepicker.es.min.js" charset="UTF-8"></script>
         
         <!--Controladores-->
+        <script src="js/modules.js"></script>
         <script src="js/app.js"></script>
         <script src="js/Controllers/loginCtrl.js"></script>
     </body>
