Se agregan tablas del modulo de administración

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Ltc</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="utils/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div ng-view></div>
@@ -18,11 +19,7 @@ and open the template in the editor.
         <script src="./js/lib/angular.min.js"></script>
         <script src="./js/lib/angular-route.min.js"></script>
 
-        <script src="./js/lib/bootstrap.min.js"></script>
-        <script src="./js/lib/moment-with-langs.min.js"></script>
-
-        <script src="./js/lib/bootstrap-datepicker.min.js"></script>
-        <script src="./js/lib/bootstrap-datepicker.es.min.js" charset="UTF-8"></script>
+        <script src="utils/js/bootstrap.min.js"></script>
         
         <!--Controladores-->
         <script src="js/module.js"></script>
